# roleplay-chatbot

./: .gitignore  README.md  characters.json  docker-compose.yml  flow.mermaid  main.py  pyproject.toml  skills-lock.json
app/: __init__.py  config.py  llm.py  logger.py
app/graph/: builder.py
app/graph/nodes/: __init__.py  diary.py  entry.py  generate.py
app/memory/: conversation_archive.py  facts_store.py
app/models/: character.py  state.py
