[project]
name = "ai-local-research"
version = "0.1.0"
description = "Local AI-powered roleplay chatbot using Ollama and LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "langchain-core>=1.2.28",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
